ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/Proposal_Approval_Log__c.object-meta.xml
<CustomObject>
    <label>Proposal Approval Log</label>
    <nameField>
        <label>Proposal Approval Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Approval Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>