ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Approval_Condition__c.field-meta.xml
<CustomField>
    <fullName>Approval_Condition__c</fullName>
    <label>Approval Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>