ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>TextArea</type>
</CustomField>