ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>50</length>
    <type>Text</type>
</CustomField>