ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Deviation_Id__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deviation Id</label>
    <referenceTo>Deviation__c</referenceTo>
    <relationshipLabel>Proposal Approval Logs</relationshipLabel>
    <relationshipName>Proposal_Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>