ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Deviation_Status__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Status__c</fullName>
    <label>Deviation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Conditionally Approve</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>