ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forward_Remark__c.field-meta.xml
<CustomField>
    <fullName>Forward_Remark__c</fullName>
    <label>Forward Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>