ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarded_By__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_By__c</fullName>
    <label>Forwarded By</label>
    <type>TextArea</type>
</CustomField>