ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarded_Employee__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forwarded Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposal_Approval_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>