ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarded_On__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_On__c</fullName>
    <label>Forwarded On</label>
    <type>DateTime</type>
</CustomField>