ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarded_Role__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_Role__c</fullName>
    <label>Forwarded Role</label>
    <length>25</length>
    <type>Text</type>
</CustomField>