ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarded_SF_Role__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_SF_Role__c</fullName>
    <label>Forwarded SF Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>