ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarding_Employee__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forwarding Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposal_Approval_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>