ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarding_Role__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Role__c</fullName>
    <label>Forwarding Role</label>
    <length>25</length>
    <type>Text</type>
</CustomField>