ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Forwarding_SF_Role__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_SF_Role__c</fullName>
    <label>Forwarding SF Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>