ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Hold_by_others__c.field-meta.xml
<CustomField>
    <fullName>Hold_by_others__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is using in CAM Summary screen and also in CAM and Approval log screen</description>
    <label>Hold by others</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hold_by_others</relationshipName>
    <type>Lookup</type>
</CustomField>