ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Hold_Remark__c.field-meta.xml
<CustomField>
    <fullName>Hold_Remark__c</fullName>
    <label>Hold Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>