ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Is_Forwarded_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_Forwarded_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Forwarded Flag</label>
    <type>Checkbox</type>
</CustomField>