ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Loan_Ammount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Ammount__c</fullName>
    <label>Loan Ammount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>