ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Log_Status__c.field-meta.xml
<CustomField>
    <fullName>Log_Status__c</fullName>
    <label>Log  Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>