ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Deviation</fullName>
            </value>
            <value>
                <fullName>Forward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>