ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Parent_CAM__c.field-meta.xml
<CustomField>
    <fullName>Parent_CAM__c</fullName>
    <label>Parent CAM</label>
    <referenceTo>CAM__c</referenceTo>
    <relationshipLabel>Proposal Approval Logs</relationshipLabel>
    <relationshipName>Proposal_Approval_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>