ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Proposal_Approval_Condition__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Approval_Condition__c</fullName>
    <label>Proposal Approval Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>