ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Proposal_Approval_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Approval_Log_ID__c</fullName>
    <displayFormat>APPR_FWD_{00000000}</displayFormat>
    <label>Proposal Approval Log ID</label>
    <type>AutoNumber</type>
</CustomField>