ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Proposal_description__c.field-meta.xml
<CustomField>
    <fullName>Proposal_description__c</fullName>
    <label>Proposal description</label>
    <type>TextArea</type>
</CustomField>