ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Proposal_Rejected_by_any_authority__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Rejected_by_any_authority__c</fullName>
    <label>Proposal Rejected by any authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>