ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Proposal_Remark__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Remark__c</fullName>
    <label>Proposal Remark</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>