ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Required_CRM_IRR__c.field-meta.xml
<CustomField>
    <fullName>Required_CRM_IRR__c</fullName>
    <label>Required CRM IRR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>