ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>25</length>
    <type>Text</type>
</CustomField>