ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/fields/Submitted_By_BE_CVO__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_BE_CVO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted By BE / CVO</label>
    <type>Checkbox</type>
</CustomField>