ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/recordTypes/Deviation_Log.recordType-meta.xml
<RecordType>
    <fullName>Deviation_Log</fullName>
    <active>true</active>
    <label>Deviation Log</label>
</RecordType>