ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/recordTypes/Forward_log.recordType-meta.xml
<RecordType>
    <fullName>Forward_log</fullName>
    <active>true</active>
    <label>Forward log</label>
</RecordType>