ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/recordTypes/Proposal_log.recordType-meta.xml
<RecordType>
    <fullName>Proposal_log</fullName>
    <active>true</active>
    <label>Proposal log</label>
</RecordType>