ProdIND/ProdPrograms/force-app/main/default/objects/Proposal_Approval_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Approval_Condition__c</columns>
    <columns>Forwarded_By__c</columns>
    <columns>Forwarded_Role__c</columns>
    <columns>Parent_CAM__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>